--- a/clittr/GoogleService-Info.plist
+++ b/clittr/GoogleService-Info.plist
@@ -7,19 +7,21 @@
 	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
 	<string>ca-app-pub-3940256099942544/4411468910</string>
 	<key>CLIENT_ID</key>
-	<string>992091384678-dlj6ttfs7idi0ieu7ifb86mu0ms2u8p7.apps.googleusercontent.com</string>
+	<string>154293691388-5vumggpe65lcivc9p0c1tu9qc167afgd.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.992091384678-dlj6ttfs7idi0ieu7ifb86mu0ms2u8p7</string>
+	<string>com.googleusercontent.apps.154293691388-5vumggpe65lcivc9p0c1tu9qc167afgd</string>
+	<key>API_KEY</key>
+	<string>AIzaSyBhFJojDlfQfYRXR3AzoDUaIbli79m20U8</string>
 	<key>GCM_SENDER_ID</key>
-	<string>992091384678</string>
+	<string>154293691388</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.clittrapp.clittr</string>
 	<key>PROJECT_ID</key>
-	<string>clittr-9f54b</string>
+	<string>clittr-b4eb1</string>
 	<key>STORAGE_BUCKET</key>
-	<string>clittr-9f54b.appspot.com</string>
+	<string>clittr-b4eb1.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<true/>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -31,8 +33,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true/>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:992091384678:ios:8f014255609aa734</string>
+	<string>1:154293691388:ios:8f014255609aa734</string>
 	<key>DATABASE_URL</key>
-	<string>https://clittr-9f54b.firebaseio.com</string>
+	<string>https://clittr-b4eb1.firebaseio.com</string>
 </dict>
 </plist>
